--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>OTP Verification Form</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- Boxicons CSS -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-   <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <i class="bx bxs-check-shield"></i>
-      </header>
-      <h4>Enter OTP Code</h4>
-      <form action="#">
-        <div class="input-field">
-          <input type="number" />
-          <input type="number" disabled />
-          <input type="number" disabled />
-          <input type="number" disabled />
-        </div>
-        <button>Verify OTP</button>
-      </form>
-    </div>
-  </body>
+<html>
+<head>
+  <title>Login and Registration Form</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Login and Registration Form</h1>
+
+  <div class="form-container">
+    <form id="loginForm">
+      <h2>Login</h2>
+      <div>
+        <label for="loginUsername">Username</label>
+        <input type="text" id="loginUsername" required>
+      </div>
+      <div>
+        <label for="loginPassword">Password</label>
+        <input type="password" id="loginPassword" required>
+      </div>
+      <button type="submit">Log In</button>
+    </form>
+
+    <form id="registrationForm">
+      <h2>Registration</h2>
+      <div>
+        <label for="regUsername">Username</label>
+        <input type="text" id="regUsername" required>
+      </div>
+      <div>
+        <label for="regEmail">Email</label>
+        <input type="email" id="regEmail" required>
+      </div>
+      <div>
+        <label for="regPassword">Password</label>
+        <input type="password" id="regPassword" required>
+      </div>
+      <div>
+        <label for="regConfirmPassword">Confirm Password</label>
+        <input type="password" id="regConfirmPassword" required>
+      </div>
+      <button type="submit">Register</button>
+    </form>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
