--- a/index.html
+++ b/index.html
@@ -1,62 +1,28 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
-<head>
-    <title>Sports Buddy</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">FITLAB</h2>
-            </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">SERVICE</a></li>
-                    <li><a href="#">CITY</a></li>
-                    <li><a href="#">AREA</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </div>
-
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
-
-        </div> 
-        <div class="content">
-            <h1>Sports <br><span>Buddy</span></h1>
-            <p class="par">
-             <br>Look up,Get up & Never give up</br>
-                <br>Get Closer to the goals</br>
-                   <br>My fitness journey will be a lifelong journey </p>
- <button class="cn"><a href="#">JOIN US</a></button>
-
-                <div class="form">
-                    <h2>Login Here</h2>
-                    <input type="email" name="email" placeholder="Enter Email Here">
-                    <input type="password" name="" placeholder="Enter Password Here">
-                    <button class="btnn"><a href="#">Login</a></button>
-
-                    <p class="link">Don't have an account<br>
-                    <a href="#">Sign up </a> here</a></p>
-                    <p class="liw">Log in with</p>
-
-                    <div class="icons">
-                        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                    </div>
-
-                </div>
-                    </div>
-                </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Slider JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <section class="wrapper">
+      <i class="fa-solid fa-arrow-left button" id="prev"></i>
+      <div class="image-container">
+        <div class="carousel">
+          <img src="beach1.jpg" alt="">
+          <img scr="beach2.jpg" alt="">
+          <img scr="waterfall 1.jpg" alt="">
+          <img scr="waterfall 2.jpg" alt="">
+          <img scr="forest.jpg" alt="">
         </div>
-    </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-</body>
+        <i class="fa-solid fa-arrow-right button" id="next"></i>
+      </div>
+    </section>
+  </body>
 </html>
